HelloUltraviolet/Fixtures/RejectedSource/Polymorphism/DynamicClassObjectDiagnostics/Expected.uv
//! Expected diagnostic metadata for the DynamicClassObjectDiagnostics rejected-source specimen.

expectedDiagnostic("E-TYP-2541", "diag.14.DynamicClassObjects")
